<resources>
    <string name="app_name">calc</string>
    <string name="key_1">1</string>
    <string name="key_2">2</string>
    <string name="key_3">3</string>
    <string name="key_4">4</string>
    <string name="key_5">5</string>
    <string name="key_6">6</string>
    <string name="key_7">7</string>
    <string name="key_8">8</string>
    <string name="key_9">9</string>
    <string name="key_subtraction">-</string>
    <string name="key_addition">+</string>
    <string name="key_multiplication">X</string>
    <string name="key_0">0</string>
    <string name="key_dot">dot</string>
    <string name="key_equals">=</string>
    <string name="key_division">/</string>
    <string name="CLEAR">CLEAR</string>
    <string name="select_theme">select theme</string>
    <string name="theme_1">theme 1</string>
    <string name="theme_2">theme 2</string>
    <string name="theme_3">theme 3</string>
    <string name="how_to">ethernet</string>
    <string name="ethernet">ethernet</string>
</resources>