<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/fon"
    >
    <TextView
        android:id="@+id/textView1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="405dp"
        android:hint="ОТВЕТ ТУТ"
        android:textSize="33sp"
        android:autofillHints="no"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_1"
        android:layout_width="90dp"
        android:layout_height="48dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="3dp"
        android:text="@string/key_1"
        app:layout_constraintTop_toBottomOf="@id/textView1"
        app:layout_constraintBottom_toTopOf="@+id/key_4"
        app:layout_constraintEnd_toStartOf="@+id/key_2"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.3"
        app:layout_constraintVertical_chainStyle="packed"
        style = "@style/CalcButton"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_2"
        android:layout_width="90dp"
        android:layout_height="48dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="3dp"
        android:text="@string/key_2"
        app:layout_constraintBottom_toTopOf="@+id/key_5"
        app:layout_constraintEnd_toStartOf="@+id/key_3"
        app:layout_constraintStart_toEndOf="@+id/key_1"
        app:layout_constraintTop_toBottomOf="@id/textView1"
        app:layout_constraintVertical_bias="0.3"
        app:layout_constraintVertical_chainStyle="packed"
        style = "@style/CalcButton"/>



    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_3"
        android:layout_width="90dp"
        android:layout_height="48dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="3dp"
        android:text="@string/key_3"
        app:layout_constraintBottom_toTopOf="@id/key_6"
        app:layout_constraintEnd_toEndOf="@id/key_subtraction"
        app:layout_constraintStart_toEndOf="@+id/key_2"
        app:layout_constraintTop_toBottomOf="@id/textView1"
        app:layout_constraintVertical_bias="0.3"
        app:layout_constraintVertical_chainStyle="packed"
        style = "@style/CalcButton"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_subtraction"
        android:layout_width="90dp"
        android:layout_height="48dp"
        android:layout_marginStart="3dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="3dp"
        android:text="@string/key_subtraction"
        app:layout_constraintBottom_toBottomOf="@+id/key_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/key_3"
        app:layout_constraintTop_toTopOf="@+id/key_3"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintVertical_chainStyle="packed"
        style = "@style/CalcButton.Operate"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_4"
        android:layout_width="90dp"
        android:layout_height="48dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="3dp"
        android:text="@string/key_4"
        app:layout_constraintBottom_toTopOf="@id/key_7"
        app:layout_constraintEnd_toStartOf="@+id/key_5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/key_1"
        style = "@style/CalcButton"/>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_5"
        android:layout_width="90dp"
        android:layout_height="48dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="3dp"
        android:text="@string/key_5"
        app:layout_constraintBottom_toTopOf="@id/key_8"
        app:layout_constraintEnd_toStartOf="@id/key_6"
        app:layout_constraintStart_toEndOf="@id/key_4"
        app:layout_constraintTop_toBottomOf="@id/key_2"
        app:layout_constraintVertical_bias="0.3"
        style = "@style/CalcButton"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_6"
        android:layout_width="90dp"
        android:layout_height="48dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="3dp"
        android:text="@string/key_6"
        app:layout_constraintBottom_toTopOf="@id/key_9"
        app:layout_constraintEnd_toStartOf="@id/key_addition"
        app:layout_constraintStart_toEndOf="@id/key_5"
        app:layout_constraintTop_toBottomOf="@id/key_3"
        app:layout_constraintVertical_bias="0.3"
        style = "@style/CalcButton"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_addition"
        android:layout_width="90dp"
        android:layout_height="48dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="3dp"
        android:text="@string/key_addition"
        app:layout_constraintBottom_toTopOf="@id/key_multiplication"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/key_6"
        app:layout_constraintTop_toBottomOf="@id/key_subtraction"
        app:layout_constraintVertical_bias="0.3"
        style = "@style/CalcButton.Operate"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_7"
        android:layout_width="90dp"
        android:layout_height="48dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="3dp"
        android:text="@string/key_7"
        app:layout_constraintBottom_toTopOf="@id/key_0"
        app:layout_constraintEnd_toStartOf="@+id/key_8"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/key_4"
        style = "@style/CalcButton"/>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_8"
        android:layout_width="90dp"
        android:layout_height="48dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="3dp"
        android:text="@string/key_8"
        app:layout_constraintBottom_toTopOf="@id/key_dot"
        app:layout_constraintEnd_toStartOf="@id/key_9"
        app:layout_constraintStart_toEndOf="@id/key_7"
        app:layout_constraintTop_toBottomOf="@id/key_5"
        style = "@style/CalcButton"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_9"
        android:layout_width="90dp"
        android:layout_height="48dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="3dp"
        android:text="@string/key_9"
        app:layout_constraintBottom_toTopOf="@id/key_equals"
        app:layout_constraintEnd_toStartOf="@id/key_multiplication"
        app:layout_constraintStart_toEndOf="@id/key_8"
        app:layout_constraintTop_toBottomOf="@id/key_6"
        style = "@style/CalcButton"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_multiplication"
        android:layout_width="90dp"
        android:layout_height="48dp"
        android:layout_marginStart="3dp"
        android:layout_marginEnd="3dp"
        android:text="@string/key_multiplication"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/key_9"
        app:layout_constraintTop_toTopOf="@+id/key_9"
        style = "@style/CalcButton.Operate"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_0"
        android:layout_width="90dp"
        android:layout_height="48dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="3dp"
        android:text="@string/key_0"
        app:layout_constraintEnd_toStartOf="@+id/key_dot"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/key_7"
        app:layout_constraintTop_toBottomOf="@+id/key_7"
        style = "@style/CalcButton"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_dot"
        android:layout_width="90dp"
        android:layout_height="48dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="3dp"
        android:text="@string/key_dot"
        app:layout_constraintEnd_toStartOf="@+id/key_equals"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/key_8"
        app:layout_constraintTop_toBottomOf="@id/key_8"
        style = "@style/CalcButton.Operate"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_equals"
        android:layout_width="90dp"
        android:layout_height="48dp"
        android:layout_marginTop="3dp"
        android:text="@string/key_equals"
        app:layout_constraintStart_toStartOf="@+id/key_9"
        app:layout_constraintTop_toBottomOf="@id/key_9"
        style = "@style/CalcButton.Operate"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_division"
        android:layout_width="90dp"
        android:layout_height="48dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="3dp"
        android:text="@string/key_division"
        app:layout_constraintBottom_toBottomOf="@+id/key_equals"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.315"
        app:layout_constraintStart_toEndOf="@+id/key_equals"
        app:layout_constraintTop_toBottomOf="@id/key_multiplication"
        app:layout_constraintVertical_bias="0.0"
        style = "@style/CalcButton.Operate"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/clear_text"
        android:layout_width="380dp"
        android:layout_height="48dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="3dp"
        android:text="@string/CLEAR"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/key_equals"
        style = "@style/CalcButton.Operate"/>

</androidx.constraintlayout.widget.ConstraintLayout>